[package]
name = "gtirb"
description = "Rust library for GTIRB"
version = "0.1.0"
authors = ["Kevin Warrick <kevinjwarrick@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"
repository = "https://github.com/kwarrick/gtirb-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
