[package]
name = "gtirb"
description = "Rust library for GTIRB"
version = "0.1.0"
authors = ["Kevin Warrick <kevinjwarrick@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"
repository = "https://github.com/kwarrick/gtirb-rs"
readme = "README.md"

[build-dependencies]
prost-build = "0.6.1"

[dependencies]
anyhow = "1.0.28"
bytes = "0.5.4"
prost = "0.6.1"
uuid = "0.8.1"
